--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -12,6 +12,7 @@ block content
 
       .popup__form.form.form--log-in
         form(action='/login' method='POST')
+          input(type="hidden" name="_csrf" value=csrfToken)
           .form__field
             label
               input(type='email' name='email' value=email placeholder='Электронная почта' required)
