--- a/src/express/templates/articles/add.pug
+++ b/src/express/templates/articles/add.pug
@@ -13,6 +13,8 @@ block content
             enctype="multipart/form-data"
             autocomplete="off"
           )
+            input(type="hidden" name="_csrf" value=csrfToken)
+
             .new-publication__header
               -
                 const title = id
